--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -51,13 +51,16 @@ section {
 /* Header Component */
 /*----------------------------------------*/
 header {
-    background: #ECF1EA;
-}
-header .nav.navbar-nav {
-    text-transform: uppercase;
+    background: #ecf1e9;
+    padding-bottom: 6%;
 }
 nav {
     margin-top: 30px;
+    z-index: 100;
+}
+.wrapper {
+    padding-left: 5%; 
+    padding-right: 5%; 
 }
 .navbar-default {
     background-color: transparent;
@@ -70,13 +73,29 @@ nav {
 .navbar-brand {
     position: absolute;
     top: -27px;
+    left: -1px;
 }
 .navbar-brand img {
-    width: 70%;
+    width: 90%;
 }
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    padding-top: 20px;
+.nav.navbar-nav li a {
+    text-transform: uppercase;
+    color: #5c5c5c;
 }
+.nav.navbar-nav li a:hover {
+    color: #fff;
+}
+.carousel-inner .item img {
+    width: 120%;
+}
+.carousel-indicators {
+    bottom: -50px;
+}
+.carousel-indicators li {
+    background-color: #773774;
+    border: 2px solid #773774;
+}
+
 
 
 
