--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,18 +10,15 @@ html {
 
 body {
     background: rgba(0,221,170,1);
-    background: -moz-linear-gradient(-45deg, rgba(0,221,170,1) 0%, rgba(1,202,246,1) 100%);
     background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(0,221,170,1)), color-stop(100%, rgba(1,202,246,1)));
     background: -webkit-linear-gradient(-45deg, rgba(0,221,170,1) 0%, rgba(1,202,246,1) 100%);
-    background: -o-linear-gradient(-45deg, rgba(0,221,170,1) 0%, rgba(1,202,246,1) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(0,221,170,1) 0%, rgba(1,202,246,1) 100%);
+    background: -webkit-linear-gradient(315deg, rgba(0,221,170,1) 0%, rgba(1,202,246,1) 100%);
     background: linear-gradient(135deg, rgba(0,221,170,1) 0%, rgba(1,202,246,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ddaa', endColorstr='#01caf6', GradientType=1 );
 }
 
 
 h1, h2, h3 {
-    font-family: 'Lato', sans-serif;
     line-height: 1.6em;
     letter-spacing: 1px;
     font-weight: 300;
@@ -83,7 +80,7 @@ nav {
 }
 .navbar-brand {
     position: absolute;
-    left: -1px;
+    left: -16px;
 }
 .nav > li > a {
     position: relative;
@@ -92,16 +89,16 @@ nav {
 .nav.navbar-nav li a {
     text-transform: uppercase;
     color: #5c5c5c;
+    -webkit-transition: all .5s;
     transition: all .5s;
+    font-weight: 500;
 }
 .nav.navbar-nav li a:hover {
     color: #fff;
     background: rgba(183,32,119,1);
-    background: -moz-linear-gradient(-45deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
     background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(183,32,119,1)), color-stop(72%, rgba(46,47,113,1)), color-stop(100%, rgba(46,47,113,1)));
     background: -webkit-linear-gradient(-45deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
-    background: -o-linear-gradient(-45deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
+    background: -webkit-linear-gradient(315deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
     background: linear-gradient(135deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
     border-radius: 4px;
 }
@@ -119,10 +116,77 @@ nav {
 
 
 
+/*----------------------------------------*/
+/* Services Component */
+/*----------------------------------------*/
 
 
-
-
+#services {
+    padding: 50px 0px;
+    background: #00b8b6;
+    color: #fff;
+}
+.middle-title h2 {
+    padding-bottom: 10px;
+    font-family: 'Aclonica', sans-serif;
+    text-transform: capitalize;
+    border-bottom: 4px solid #fff;
+    margin-bottom: 4px;
+}
+.middle-title span {
+    text-align: center;
+    display: inline-block;
+    margin-right: 3%;
+    width: 60px;
+    height: 60px;
+    padding-top: 6px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    background: rgba(1,201,246,1);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(1,201,246,1)), color-stop(100%, rgba(0,221,170,1)));
+    background: -webkit-linear-gradient(top, rgba(1,201,246,1) 0%, rgba(0,221,170,1) 100%);
+    background: linear-gradient(to bottom, rgba(1,201,246,1) 0%, rgba(0,221,170,1) 100%);
+}
+.middle-content ul {
+    padding-left: 0px;
+    padding-top: 25px;
+    border-top: 1px solid #fff;
+}
+.middle-content ul li {
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 10px;
+    list-style: none;
+}
+.middle-content ul li:hover {
+    color: #8fd9d8;
+}
+.middle-content ul li:before {
+    content: " ";
+    padding: 0px 6px;
+    border-radius: 50%;
+    background: #fff;
+    font-size: 8px;
+    margin-right: 12px;
+    padding-top: 2px;
+    box-shadow: 1px 1px 2px #858585;
+}
+.middle-content ul li:hover:before {
+    background: #8fd9d8;
+}
+.middle-link {
+    margin-top: 20px;
+    background-image: url("../images/read-more.png");
+    width: 120px;
+    height: 43px;
+    background-repeat: no-repeat;
+    text-align: center;
+    padding-top: 7px; 
+}
+.middle-link a {
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 800;
+}
 
 
 
