--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,6 +14,7 @@
             padding-top: 22px;
         }
         .navbar-brand {
+            left: -16px;
             top: -25px;
         }
         .navbar-brand img {
@@ -25,6 +26,18 @@
         
         
         /* Services Component */
+        #services {
+            padding: 50px 0px;
+        }
+        .middle-title h2 {
+            font-size: 200%;
+        }
+        .middle-title span {
+            width: 50px;
+            height: 50px;
+            padding-top: 4px;
+            font-size: 90%;
+        }
         .middle-content ul li {
             font-size: 130%;
         }
@@ -46,6 +59,13 @@
         }
         .carousel-indicators {
             bottom: -32px;
+        }
+        
+        /* Services Component */
+        .middle-title span {
+            width: 60px;
+            height: 60px;
+            padding-top: 6px;
         }
 
     }
