--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -35,10 +35,6 @@ a:link, a:active {
     text-decoration: none;
 }
 
-section {
-    margin-bottom: 80px;
-}
-
 
 /*----------------------------------------*/
 /* Reuseable Component */
@@ -130,7 +126,7 @@ nav {
 
 
 #services {
-    padding: 20px 0px;
+    padding: 50px 0px 20px;
     background: #00b8b6;
     color: #fff;
 }
@@ -156,12 +152,12 @@ nav {
     background: -webkit-linear-gradient(top, rgba(1,201,246,1) 0%, rgba(0,221,170,1) 100%);
     background: linear-gradient(to bottom, rgba(1,201,246,1) 0%, rgba(0,221,170,1) 100%);
 }
-.middle-content ul {
+.middle-content ul, .buttom-services {
     padding-left: 0px;
     padding-top: 25px;
     border-top: 1px solid #fff;
 }
-.middle-content ul li {
+.middle-content ul li, .buttom-services li {
     font-family: 'Lato', sans-serif;
     margin-bottom: 10px;
     list-style: none;
@@ -169,12 +165,12 @@ nav {
 .middle-content ul li:hover {
     color: #8fd9d8;
 }
-.middle-content ul li:before {
+.middle-content ul li:before, .buttom-services li:before {
     content: " ";
-    padding: 0px 6px;
+    padding: 0px 5px;
     border-radius: 50%;
     background: #fff;
-    font-size: 8px;
+    font-size: 6px;
     margin-right: 12px;
     padding-top: 2px;
     box-shadow: 1px 1px 2px #858585;
@@ -190,6 +186,7 @@ nav {
     background-repeat: no-repeat;
     text-align: center;
     padding-top: 7px; 
+    margin-bottom: 50px;
 }
 .middle-link a {
     text-transform: uppercase;
@@ -204,8 +201,10 @@ nav {
 /* Bottom Component */
 /*----------------------------------------*/
 #bottom {
-    background: #ecf1e9;
+    margin-top: 50px;
     padding-bottom: 50px;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 #bottom h2 {
     font-family: 'Lato', sans-serif;
@@ -219,8 +218,9 @@ nav {
     text-transform: capitalize;
     color: #fff;
     background: #00b8b6;
-    padding: 5px 8px;
-    font-size: 120%;
+    padding: 8px 11px;
+    font-size: 110%;
+    border-radius: 2px;
 }
 .bottom-button:hover {
     color: #fff;
@@ -230,13 +230,40 @@ nav {
     background: -webkit-linear-gradient(315deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);
     background: linear-gradient(135deg, rgba(183,32,119,1) 0%, rgba(46,47,113,1) 72%, rgba(46,47,113,1) 100%);  
 }
-#welcome img {
+#welcome img, #mission img {
+    margin-bottom: 30px;
     border: 10px solid #fff;
 }
-#welcome h5 {
+#welcome h5, #mission h5 {
     font-size: 110%;
     font-weight: 600;
     color: #00b8b6;
+}
+
+.buttom-services {
+    padding: 0px 0px 10px 0px;
+    border-top: none;
+}
+.buttom-services li {
+    padding-bottom: 5px;
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 10px;
+    list-style: none;
+    color: #00b8b6;
+    font-size: 110%;
+    border-bottom: 1px solid #e2e3de;
+}
+.buttom-services li:last-child {
+    border: none;
+}
+.buttom-services li:hover {
+    color: rgba(183,32,119,1);
+}
+.buttom-services li:before {
+    background: #00b8b6;
+}
+.buttom-services li:hover:before {
+    background: rgba(183,32,119,1);
 }
 
 
