--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -136,6 +136,7 @@
             text-transform: uppercase;
             font-weight: 100;
             font-size: 150%;
+            cursor: default;
         }
         .buttom-services {
             padding-bottom: 22px;
