--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -67,10 +67,18 @@
         }
         
         /* Footer Component */
+        #footer-menu {
+            display: none;
+        }
+        .footer-nav ul {
+            display: block;
+            margin-top: 0px;
+        }
         .footer-nav ul li {
             float: left;
-            margin-right: 5px;
+            margin-right: 11px;
             font-size: 85%;
+            margin-left: 0px;
         }
 
     }
@@ -96,6 +104,7 @@
         .footer-nav ul li {
             float: left;
             font-size: 90%;
+            margin-right: 10px;
         }
     }
 
@@ -163,8 +172,11 @@
         
         /* Footer Component */
         footer {
-            padding-top: 20px;
+            padding-top: 10px;
             padding-left: 0%;
+        }
+        .footer-nav ul li {
+            margin-right: 20px;
         }
 
     }
